--- a/src/assets/sass/base/_page.scss
+++ b/src/assets/sass/base/_page.scss
@@ -36,6 +36,40 @@ html {
   box-sizing: inherit;
 }
 
+ul {
+  list-style: none;
+}
+
+.bullets {
+  padding-left: 3em;
+}
+
+.top-bullet {
+  text-align: center;
+  font-size: 40px;
+  text-decoration: underline;
+}
+
+.full-image {
+  padding: none;
+}
+
+.text {
+  padding-left: 3em;
+
+  text-align: justified;
+
+}
+
+.text-border {
+    display: inline-block;
+    width: 100rem;
+    border: .6rem solid rgb(201, 200, 200);
+    text-align: justify;
+    padding-right: 6rem;
+    padding-left: 6rem;
+}
+
 .main-body {
   background-color: _palette(bg);
 
