--- a/src/assets/sass/components/_list.scss
+++ b/src/assets/sass/components/_list.scss
@@ -10,16 +10,15 @@
 		list-style: decimal;
 		margin: 0 0 _size(element-margin) 0;
 		padding-left: 1.25em;
-
 		li {
 			padding-left: 0.25em;
 		}
 	}
 
 	ul {
-		list-style: disc;
+		list-style-type: none;
 		margin: 0 0 _size(element-margin) 0;
-		padding-left: 1em;
+		padding-left: 3em;
 
 		li {
 			padding-left: 0.5em;
