--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -9,6 +9,8 @@
 	.image {
 		border-radius: _size(border-radius);
 		border: 0;
+		width: 100%;
+    height: auto;
 		display: inline-block;
 		position: relative;
 
