--- a/src/assets/sass/components/_box.scss
+++ b/src/assets/sass/components/_box.scss
@@ -10,13 +10,15 @@
 		border-radius: _size(border-radius);
 		border: solid 2px _palette(border);
 		margin-bottom: _size(element-margin);
-		padding: 1.5em;
+		padding: 1 em;
+		padding-bottom: 2 em;
+		padding-right: -2 em;
 
-		> :last-child,
-		> :last-child > :last-child,
-		> :last-child > :last-child > :last-child {
-			margin-bottom: 0;
-		}
+		// > :last-child,
+		// > :last-child > :last-child,
+		// > :last-child > :last-child > :last-child {
+		// 	margin-bottom: 0;
+		// }
 
 		&.alt {
 			border: 0;
